2003-11-19  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-selector.c (emfs_create_name_activate): Emit the
	response signal with the RESPONSE_NEW value.
	(emfs_create_name_changed): Sanity check the entry text and set OK
	sensitivity.
	(folder_selected_cb): If there is an entry widget, then call
	name_changed() to decide sensitivity, else set OK to be sensitive.

	* em-utils.c (em_utils_selection_set_urilist): Same.

	* em-format-html-display.c (efhd_drag_data_get): Same as below.

	* em-folder-tree.c (drag_text_uri_list): Terminate each url of a
	text/uri-list with a \r\n.

2003-11-19  Ettore Perazzoli  <ettore@ximian.com>

	* GNOME_Evolution_Mail.server.in.in: Add an
	"evolution:uri_schemas" attribute.

2003-11-19  Not Zed  <NotZed@Ximian.com>

	* mail-component.c (em_uri_to_camel): if we're setting the
	fragment, strip leading /'s.

	* mail-tools.c (mail_tool_get_meta_data)
	(mail_tool_delete_meta_data, meta_data_key): old stuff killed.
	(mail_tool_uri_to_folder): handle email: uri's specially.  this is
	a bit of a hack, the filter callbacks should manage this itself
	since filters are the only bits which use those uri's.

2003-11-18  Jeffrey Stedfast  <fejj@ximian.com>

	* em-migrate.c (em_migrate_dir): Don't leak the message objects.

	* em-folder-tree.c (em_copy_folders): Execute asynchronously by
	queueing the copy in another thread.
	(em_copy_folders__copy): Moved the original logic here.

2003-11-18  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-tree.c (tree_row_expanded): Queue the
	camel_store_get_folder_info() call in another thread.
	(em_folder_tree_get_folder_info__got): Moved all the logic of
	tree_row_expanded here.

2003-11-17  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-tree.c (tree_row_expanded): Fixed to check fi->child
	as well (since mbox does it right).
	(emft_popup_new_folder_response): Fixed to subscribe to the
	correct folder.
	(emft_popup_delete_folders): Fixed to use the full_name rather
	than the path.
